<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OMusic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_opened">drawer opened</string>
    <string name="drawer_closed">drawer closed</string>
    <string name="desc_play">PlayButton</string>
    <string name="desc_next">NextButton</string>
    <string name="desc_prev">PrevButton</string>
    <string name="start_time">00:00</string>
    <string name="end_time">00:00</string>
    <string name="song_image">SongImage</string>
    <string name="volumeButton">volume Button</string>
    <string name="title_activity_music_menu">MusicMenu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="album_activity">im album activity</string>
    <string name="track_name">TrackHere</string>
    <string name="add_playlist">Add new</string>
    <string-array name="titles">
        <item>Home</item>
        <item>Tracks</item>
        <item>Albums</item>
        <item>Playlists</item>
        <item>Artists</item>
    </string-array>
</resources>
