<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="opendyne.vj.omusic.PlayerFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/playerFragment"
        tools:context=".MainActivity$PlaceholderFragment">

        <ImageButton
            android:contentDescription="@string/desc_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_button"
            android:src="@drawable/play_normal"
            android:background="@null"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:layout_toEndOf="@+id/play_button"
            android:src="@drawable/next_button"
            android:background="@null"
            android:contentDescription="@string/desc_next"
            android:layout_below="@+id/playSeekBar"
            android:layout_toRightOf="@+id/play_button" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prev_button"
            android:background="@null"
            android:src="@drawable/prev_button"
            android:layout_toStartOf="@+id/play_button"
            android:contentDescription="@string/desc_prev"
            android:layout_below="@+id/playSeekBar"
            android:layout_toLeftOf="@+id/play_button" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playSeekBar"
            android:layout_above="@+id/play_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/start_time"
            android:id="@+id/startTimeTextView"
            android:layout_alignTop="@+id/play_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/end_time"
            android:id="@+id/endTimeTextView"
            android:layout_below="@+id/playSeekBar"
            android:layout_alignRight="@+id/playSeekBar"
            android:layout_alignEnd="@+id/playSeekBar" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/volumeSeekBar"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/endTimeTextView"
            android:layout_toStartOf="@+id/endTimeTextView"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="10dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/volumeOnButton"
            android:layout_toEndOf="@+id/volumeSeekBar"
            android:src="@drawable/volume_button_on"
            android:background="@null"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/volumeSeekBar"
            android:contentDescription="@string/volumeButton"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/hello_world"
            android:id="@+id/songNameTextView"
            android:layout_below="@+id/volumeOnButton"
            android:layout_alignLeft="@+id/volumeSeekBar"
            android:layout_alignStart="@+id/volumeSeekBar"
            android:layout_alignRight="@+id/playSeekBar"
            android:layout_alignEnd="@+id/playSeekBar" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/songNameTextView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/playSeekBar"
            android:id="@+id/imageLayout">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/songImageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

    </RelativeLayout>



</FrameLayout>
